// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test transforms individual transforms work as expected Code block should transform to Preformatted block. fixture: core__code 1`] = `
"<!-- wp:preformatted -->
<pre class=\\"wp-block-preformatted\\">export default function MyButton() {
	return <Button>Click Me!</Button>;
}</pre>
<!-- /wp:preformatted -->"
`;

exports[`test transforms individual transforms work as expected Heading block should transform to Cover block. fixture: core__heading__h2 1`] = `
"<!-- wp:cover -->
<div class=\\"wp-block-cover has-background-dim\\"><p class=\\"wp-block-cover-text\\">A picture is worth a thousand words, or so the saying goes</p></div>
<!-- /wp:cover -->"
`;

exports[`test transforms individual transforms work as expected Heading block should transform to Cover block. fixture: core__heading__h2-em 1`] = `
"<!-- wp:cover -->
<div class=\\"wp-block-cover has-background-dim\\"><p class=\\"wp-block-cover-text\\">The <em>Inserter</em> Tool</p></div>
<!-- /wp:cover -->"
`;

exports[`test transforms individual transforms work as expected Heading block should transform to Paragraph block. fixture: core__heading__h2 1`] = `
"<!-- wp:paragraph -->
<p>A picture is worth a thousand words, or so the saying goes</p>
<!-- /wp:paragraph -->"
`;

exports[`test transforms individual transforms work as expected Heading block should transform to Paragraph block. fixture: core__heading__h2-em 1`] = `
"<!-- wp:paragraph -->
<p>The <em>Inserter</em> Tool</p>
<!-- /wp:paragraph -->"
`;

exports[`test transforms individual transforms work as expected Heading block should transform to Quote block. fixture: core__heading__h2 1`] = `
"<!-- wp:quote -->
<blockquote class=\\"wp-block-quote\\"><p>A picture is worth a thousand words, or so the saying goes</p></blockquote>
<!-- /wp:quote -->"
`;

exports[`test transforms individual transforms work as expected Heading block should transform to Quote block. fixture: core__heading__h2-em 1`] = `
"<!-- wp:quote -->
<blockquote class=\\"wp-block-quote\\"><p>The <em>Inserter</em> Tool</p></blockquote>
<!-- /wp:quote -->"
`;

exports[`test transforms individual transforms work as expected List block should transform to Paragraph block. fixture: core__list__ul 1`] = `
"<!-- wp:paragraph -->
<p>Text &amp; Headings</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>Images &amp; Videos</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>Galleries</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>Embeds, like YouTube, Tweets, or other WordPress posts.</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>Layout blocks, like Buttons, Hero Images, Separators, etc.</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>And <em>Lists</em> like this one of course :)</p>
<!-- /wp:paragraph -->"
`;

exports[`test transforms individual transforms work as expected List block should transform to Quote block. fixture: core__list__ul 1`] = `
"<!-- wp:quote -->
<blockquote class=\\"wp-block-quote\\"><p>Text &amp; Headings</p><p>Images &amp; Videos</p><p>Galleries</p><p>Embeds, like YouTube, Tweets, or other WordPress posts.</p><p>Layout blocks, like Buttons, Hero Images, Separators, etc.</p><p>And <em>Lists</em> like this one of course :)</p></blockquote>
<!-- /wp:quote -->"
`;

exports[`test transforms individual transforms work as expected Paragraph block should transform to Heading block. fixture: core__paragraph__align-right 1`] = `
"<!-- wp:heading -->
<h2>... like this one, which is separate from the above and right aligned.</h2>
<!-- /wp:heading -->"
`;

exports[`test transforms individual transforms work as expected Paragraph block should transform to List block. fixture: core__paragraph__align-right 1`] = `
"<!-- wp:list -->
<ul><li>... like this one, which is separate from the above and right aligned.</li></ul>
<!-- /wp:list -->"
`;

exports[`test transforms individual transforms work as expected Paragraph block should transform to Preformatted block. fixture: core__paragraph__align-right 1`] = `
"<!-- wp:preformatted -->
<pre class=\\"wp-block-preformatted\\">... like this one, which is separate from the above and right aligned.</pre>
<!-- /wp:preformatted -->"
`;

exports[`test transforms individual transforms work as expected Paragraph block should transform to Quote block. fixture: core__paragraph__align-right 1`] = `
"<!-- wp:quote -->
<blockquote class=\\"wp-block-quote\\"><p>... like this one, which is separate from the above and right aligned.</p></blockquote>
<!-- /wp:quote -->"
`;

exports[`test transforms individual transforms work as expected Paragraph block should transform to Verse block. fixture: core__paragraph__align-right 1`] = `
"<!-- wp:verse -->
<pre class=\\"wp-block-verse\\">... like this one, which is separate from the above and right aligned.</pre>
<!-- /wp:verse -->"
`;

exports[`test transforms individual transforms work as expected Preformatted block should transform to Paragraph block. fixture: core__preformatted 1`] = `
"<!-- wp:paragraph -->
<p>Some <em>preformatted</em> text...<br>And more!</p>
<!-- /wp:paragraph -->"
`;

exports[`test transforms individual transforms work as expected Pullquote block should transform to Quote block. fixture: core__pullquote 1`] = `
"<!-- wp:quote -->
<blockquote class=\\"wp-block-quote\\"><p>Testing pullquote block...</p><cite>...with a caption</cite></blockquote>
<!-- /wp:quote -->"
`;

exports[`test transforms individual transforms work as expected Pullquote block should transform to Quote block. fixture: core__pullquote__multi-paragraph 1`] = `
"<!-- wp:quote -->
<blockquote class=\\"wp-block-quote\\"><p>Paragraph <strong>one</strong></p><p>Paragraph two</p><cite>by whomever</cite></blockquote>
<!-- /wp:quote -->"
`;

exports[`test transforms individual transforms work as expected Quote block should transform to Heading block. fixture: core__quote__style-1 1`] = `
"<!-- wp:heading -->
<h2>The editor will endeavour to create a new page and post building experience that makes writing rich posts effortless, and has “blocks” to make it easy what today might take shortcodes, custom HTML, or “mystery meat” embed discovery.</h2>
<!-- /wp:heading -->

<!-- wp:quote -->
<blockquote class=\\"wp-block-quote\\"><p></p><cite>Matt Mullenweg, 2017</cite></blockquote>
<!-- /wp:quote -->"
`;

exports[`test transforms individual transforms work as expected Quote block should transform to Heading block. fixture: core__quote__style-2 1`] = `
"<!-- wp:heading -->
<h2>There is no greater agony than bearing an untold story inside you.</h2>
<!-- /wp:heading -->

<!-- wp:quote {\\"className\\":\\"is-style-large\\"} -->
<blockquote class=\\"wp-block-quote is-style-large\\"><p></p><cite>Maya Angelou</cite></blockquote>
<!-- /wp:quote -->"
`;

exports[`test transforms individual transforms work as expected Quote block should transform to List block. fixture: core__quote__style-1 1`] = `
"<!-- wp:list -->
<ul><li>The editor will endeavour to create a new page and post building experience that makes writing rich posts effortless, and has “blocks” to make it easy what today might take shortcodes, custom HTML, or “mystery meat” embed discovery.</li></ul>
<!-- /wp:list -->"
`;

exports[`test transforms individual transforms work as expected Quote block should transform to List block. fixture: core__quote__style-2 1`] = `
"<!-- wp:list -->
<ul><li>There is no greater agony than bearing an untold story inside you.</li></ul>
<!-- /wp:list -->"
`;

exports[`test transforms individual transforms work as expected Quote block should transform to Paragraph block. fixture: core__quote__style-1 1`] = `
"<!-- wp:paragraph -->
<p>The editor will endeavour to create a new page and post building experience that makes writing rich posts effortless, and has “blocks” to make it easy what today might take shortcodes, custom HTML, or “mystery meat” embed discovery.</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>Matt Mullenweg, 2017</p>
<!-- /wp:paragraph -->"
`;

exports[`test transforms individual transforms work as expected Quote block should transform to Paragraph block. fixture: core__quote__style-2 1`] = `
"<!-- wp:paragraph -->
<p>There is no greater agony than bearing an untold story inside you.</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>Maya Angelou</p>
<!-- /wp:paragraph -->"
`;

exports[`test transforms individual transforms work as expected Quote block should transform to Pullquote block. fixture: core__quote__style-1 1`] = `
"<!-- wp:pullquote -->
<figure class=\\"wp-block-pullquote\\"><blockquote><p>The editor will endeavour to create a new page and post building experience that makes writing rich posts effortless, and has “blocks” to make it easy what today might take shortcodes, custom HTML, or “mystery meat” embed discovery.</p><cite>Matt Mullenweg, 2017</cite></blockquote></figure>
<!-- /wp:pullquote -->"
`;

exports[`test transforms individual transforms work as expected Quote block should transform to Pullquote block. fixture: core__quote__style-2 1`] = `
"<!-- wp:pullquote -->
<figure class=\\"wp-block-pullquote\\"><blockquote><p>There is no greater agony than bearing an untold story inside you.</p><cite>Maya Angelou</cite></blockquote></figure>
<!-- /wp:pullquote -->"
`;

exports[`test transforms individual transforms work as expected Verse block should transform to Paragraph block. fixture: core__verse 1`] = `
"<!-- wp:paragraph -->
<p>A <em>verse</em>…<br>And more!</p>
<!-- /wp:paragraph -->"
`;
